# fork_awslabs_aws-c-s3

source/: s3_auto_ranged_get.c  s3_checksum_stream.c  s3_checksums.c  s3_client.c  s3_meta_request.c  s3_parallel_input_stream.c
tests/: CMakeLists.txt  s3_data_plane_tests.c  s3_tester.c
