include(AwsTestHarness)
enable_testing()

option(BYO_CRYPTO "Don't build a tls implementation or link against a crypto interface. This feature is only for unix builds currently." OFF)

if(BYO_CRYPTO)
    set(ENABLE_NET_TESTS OFF)

    add_test_case(test_s3_client_byo_crypto_no_options)
    add_test_case(test_s3_client_byo_crypto_with_options)
endif()

file(GLOB TEST_SRC "*.c")
file(GLOB TEST_HDRS "*.h")
file(GLOB TESTS ${TEST_HDRS} ${TEST_SRC})

add_test_case(test_s3_library_init_cleanup_init_cleanup)
add_test_case(test_s3_copy_http_message)
add_test_case(test_s3_message_util_assign_body)
add_test_case(test_s3_ranged_get_object_message_new)
add_test_case(test_s3_set_multipart_request_path)
add_test_case(test_s3_create_multipart_upload_message_new)
add_test_case(test_s3_upload_part_message_new)
add_test_case(test_s3_upload_part_message_fail)
add_test_case(test_s3_complete_multipart_message_new)
add_test_case(test_s3_abort_multipart_upload_message_new)

add_net_test_case(test_s3_client_create_destroy)
add_net_test_case(test_s3_client_create_error)
add_net_test_case(test_s3_client_create_error_with_invalid_memory_limit_config)
add_net_test_case(test_s3_client_create_error_with_invalid_network_interface)
add_net_test_case(test_s3_client_monitoring_options_override)
add_net_test_case(test_s3_client_proxy_ev_settings_override)
add_net_test_case(test_s3_client_tcp_keep_alive_options_override)
add_net_test_case(test_s3_client_max_active_connections_override)
add_test_case(test_s3_client_get_max_active_connections)
add_test_case(test_s3_request_create_destroy)
add_test_case(test_s3_client_queue_requests)
add_test_case(test_s3_meta_request_body_streaming)
add_test_case(test_s3_update_meta_requests_trigger_prepare)
add_test_case(test_s3_client_update_connections_finish_result)

add_net_test_case(test_s3_meta_request_fail_prepare_request)
add_net_test_case(test_s3_meta_request_sign_request_fail)

add_net_test_case(test_s3_cancel_mpu_create_not_sent)
add_net_test_case(test_s3_cancel_mpd_nothing_sent)
add_net_test_case(test_s3_cancel_mpd_one_part_sent)

add_net_test_case(test_s3_upload_part_message_with_content_md5)
add_net_test_case(test_s3_upload_part_message_without_content_md5)
add_net_test_case(test_s3_create_multipart_upload_message_with_content_md5)
add_net_test_case(test_s3_complete_multipart_message_with_content_md5)
add_net_test_case(test_s3_asyncwrite_fails_if_request_has_completed)
add_net_test_case(test_s3_asyncwrite_fails_if_writes_overlap)

if(ENABLE_MRAP_TESTS)
    add_net_test_case(test_s3_get_object_less_than_part_size_mrap)
    add_net_test_case(test_s3_get_object_multipart_mrap)
    add_net_test_case(test_s3_put_object_less_than_part_size_mrap)
    add_net_test_case(test_s3_put_object_multipart_mrap)
endif()

add_net_test_case(test_s3_put_fail_object_invalid_send_filepath)
add_net_test_case(test_s3_put_single_part_fail_object_inputstream_fail_reading)
add_net_test_case(test_s3_put_single_part_fail_object_inputstream_mismatch_content_length)
add_net_test_case(test_s3_invalid_start_range_greator_than_end_range)

add_test_case(test_s3_request_type_operation_name)
add_test_case(test_s3_request_type_from_operation_name)
add_test_case(test_s3_replace_quote_entities)
add_test_case(test_s3_strip_quotes)
add_test_case(test_s3_parse_request_range_header)
add_test_case(test_s3_parse_content_range_response_header)
add_test_case(test_s3_parse_content_length_response_header)
add_test_case(test_s3_get_num_parts_and_get_part_range)
add_test_case(test_s3_mpu_get_part_size_and_num_parts)
add_test_case(test_s3_aws_xml_get_body_at_path)
add_test_case(test_add_user_agent_header)

add_test_case(test_get_existing_platform_info)
add_test_case(test_get_nonexistent_platform_info)
add_test_case(test_get_platforms_with_recommended_config)
add_net_test_case(load_platform_info_from_global_state_sanity_test)

add_net_test_case(sha1_nist_test_case_1)
add_net_test_case(sha1_nist_test_case_2)
add_net_test_case(sha1_nist_test_case_3)
add_net_test_case(sha1_nist_test_case_4)
add_net_test_case(sha1_nist_test_case_5)
add_net_test_case(sha1_nist_test_case_6)
add_net_test_case(sha1_test_invalid_buffer)
add_net_test_case(sha1_test_oneshot)
add_net_test_case(sha1_test_invalid_state)

add_net_test_case(sha256_nist_test_case_1)
add_net_test_case(sha256_nist_test_case_2)
add_net_test_case(sha256_nist_test_case_3)
add_net_test_case(sha256_nist_test_case_4)
add_net_test_case(sha256_nist_test_case_5)
add_net_test_case(sha256_nist_test_case_6)
add_net_test_case(sha256_test_invalid_buffer)
add_net_test_case(sha256_test_oneshot)
add_net_test_case(sha256_test_invalid_state)

add_test_case(crc64nvme_nist_test_case_1)
add_test_case(crc64nvme_nist_test_case_2)
add_test_case(crc64nvme_nist_test_case_3)
add_test_case(crc64nvme_nist_test_case_4)
add_test_case(crc64nvme_test_invalid_buffer)
add_test_case(crc64nvme_test_invalid_state)

add_test_case(crc32_nist_test_case_1)
add_test_case(crc32_nist_test_case_2)
add_test_case(crc32_nist_test_case_3)
add_test_case(crc32_nist_test_case_4)
add_test_case(crc32_nist_test_case_5)
add_test_case(crc32_nist_test_case_6)
add_test_case(crc32_test_invalid_buffer)
add_test_case(crc32_test_oneshot)
add_test_case(crc32_test_invalid_state)

add_test_case(crc32c_nist_test_case_1)
add_test_case(crc32c_nist_test_case_2)
add_test_case(crc32c_nist_test_case_3)
add_test_case(crc32c_nist_test_case_4)
add_test_case(crc32c_nist_test_case_5)
add_test_case(crc32c_nist_test_case_6)
add_test_case(crc32c_test_invalid_buffer)
add_test_case(crc32c_test_oneshot)
add_test_case(crc32c_test_invalid_state)

add_net_test_case(verify_checksum_stream)
add_net_test_case(verify_chunk_stream)

add_net_test_case(test_s3_list_bucket_init_mem_safety)
add_net_test_case(test_s3_list_bucket_init_mem_safety_optional_copies)

# Tests against local mock server
if(ENABLE_MOCK_SERVER_TESTS)
    add_net_test_case(multipart_upload_mock_server)
    add_net_test_case(multipart_upload_unsigned_with_trailer_checksum_mock_server)
    add_net_test_case(single_upload_unsigned_with_trailer_checksum_mock_server)
    add_net_test_case(multipart_upload_with_network_interface_names_mock_server)
    add_net_test_case(multipart_upload_checksum_with_retry_mock_server)
    add_net_test_case(multipart_download_checksum_with_retry_mock_server)
    add_net_test_case(async_internal_error_from_complete_multipart_mock_server)
    add_net_test_case(async_access_denied_from_complete_multipart_mock_server)
    add_net_test_case(get_object_modified_mock_server)
    add_net_test_case(get_object_invalid_responses_mock_server)
    add_net_test_case(get_object_mismatch_checksum_responses_mock_server)
    add_net_test_case(get_object_throughput_failure_mock_server)
    add_net_test_case(get_object_long_error_mock_server)
    add_net_test_case(upload_part_invalid_response_mock_server)
    add_net_test_case(upload_part_async_invalid_response_mock_server)
    add_net_test_case(resume_first_part_not_completed_mock_server)
    add_net_test_case(resume_multi_page_list_parts_mock_server)
    add_net_test_case(resume_list_parts_failed_mock_server)
    add_net_test_case(resume_after_finished_mock_server)
    add_net_test_case(multipart_upload_proxy_mock_server)
    add_net_test_case(endpoint_override_mock_server)

    add_net_test_case(s3express_provider_sanity_mock_server)
    add_net_test_case(s3express_provider_get_credentials_mock_server)
    add_net_test_case(s3express_provider_get_credentials_multiple_mock_server)
    add_net_test_case(s3express_provider_get_credentials_cancel_mock_server)
    add_net_test_case(s3express_provider_get_credentials_cache_mock_server)
    add_net_test_case(s3express_provider_background_refresh_mock_server)
    add_net_test_case(s3express_provider_background_refresh_remove_inactive_creds_mock_server)
    add_net_test_case(s3express_provider_stress_mock_server)

    add_net_test_case(s3express_client_sanity_test_mock_server)
    add_net_test_case(s3express_client_sanity_override_test_mock_server)
    add_net_test_case(request_time_too_skewed_mock_server)
    add_net_test_case(request_timeout_error_mock_server)
endif()

add_net_test_case(meta_request_auto_ranged_get_new_error_handling)
add_net_test_case(meta_request_auto_ranged_put_new_error_handling)
add_net_test_case(bad_request_error_handling)
add_net_test_case(make_meta_request_error_handling)

if(AWS_ENABLE_S3_ENDPOINT_RESOLVER)
    add_test_case(test_s3_endpoint_resolver_resolve_endpoint)
    add_test_case(test_s3_endpoint_resolver_resolve_endpoint_fips)
    add_test_case(test_s3_endpoint_resolver_resolve_endpoint_force_path_style)
endif()

add_test_case(parallel_read_stream_from_file_sanity_test)
add_test_case(parallel_read_stream_from_large_file_test)

add_test_case(test_s3_buffer_pool_threaded_allocs_and_frees)
add_test_case(test_s3_buffer_pool_large_chunk_threaded_allocs_and_frees)
add_test_case(test_s3_buffer_pool_limits)
add_test_case(test_s3_buffer_pool_trim)
add_test_case(test_s3_buffer_pool_reservation_hold)
add_test_case(test_s3_buffer_pool_too_small)
add_test_case(test_s3_buffer_pool_forced_buffer)
add_test_case(test_s3_buffer_pool_forced_buffer_after_reservation_hold)
add_test_case(test_s3_buffer_pool_forced_buffer_wont_stop_reservations)

add_net_test_case(client_update_upload_part_timeout)
add_net_test_case(client_meta_request_override_part_size)
add_net_test_case(client_meta_request_override_multipart_upload_threshold)

set(TEST_BINARY_NAME ${PROJECT_NAME}-tests)
generate_test_driver(${TEST_BINARY_NAME})

if(AWS_ENABLE_S3_ENDPOINT_RESOLVER)
    target_compile_definitions(${PROJECT_NAME}-tests PRIVATE "-DAWS_ENABLE_S3_ENDPOINT_RESOLVER")
endif()
